--- a/index.html
+++ b/index.html
@@ -5,95 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- header -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="/">Студия</a></li>
-          <li><a href="/">Портфолио</a></li>
-          <li><a href="/">Контакты</a></li>
+    <header class="main-header">
+      <nav class="main-nav">
+        <a class="logo-link link" href="./index.html">
+          <span class="accent-logo">Web</span>Studio</div></a
+        >
+        <ul class="menu-list list">
+          <li class="menu-item">
+            <a class="menu-link current link" href="/">Студия</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="/">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <!-- main -->
     <main>
       <!-- hero -->
-      <section>
-        <h1>
+      <section class="section-hero">
+        <h1 class="main-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button class="service-button" type="button">Заказать услугу</button>
       </section>
       <!-- Attention to detail -->
-      <section>
-        <h2>Наши особенности</h2>
-        <ul>
+      <section class="section-detail">
+        <h2 class="title-all">Наши особенности</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+            <h3 class="subtitle-detail">Внимание к деталям</h3>
+            <p class="text-detail">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+            <h3 class="subtitle-detail">Пунктуальность</h3>
+            <p class="text-detail">
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+            <h3 class="subtitle-detail">Планирование</h3>
+            <p class="text-detail">
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
+            <h3 class="subtitle-detail">Современные технологии</h3>
+            <p class="text-detail">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
       </section>
       <!-- What are we doing -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="section-doing">
+        <h2 class="title-all">Чем мы занимаемся</h2>
+        <ul class="doing-list list">
+          <li class="doing-item">
             <img
-              src="./images/img-sec-doing-first.jpg"
+              class="image-doing"
+              src="./images/doing/img-sec-doing-first.jpg"
               alt="человек набирает програмный код"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="doing-item">
             <img
-              src="./images/img-sec-doing-second.jpg"
+              class="image-doing"
+              src="./images/doing/img-sec-doing-second.jpg"
               alt="человек создает дизайн телефона на наутбуке"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="doing-item">
             <img
-              src="./images/img-sec-doing-third.jpg"
+              class="image-doing"
+              src="./images/doing/img-sec-doing-third.jpg"
               alt="человек рисует на планшете"
               width="370"
               height="294"
@@ -102,63 +115,69 @@
         </ul>
       </section>
       <!-- our team -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section-team">
+        <h2 class="title-all">Наша команда</h2>
+        <ul class="team-list list">
           <li>
             <img
+              class="image-team"
               src="./images/our_team/img-demianenko.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="subtitle-team">Игорь Демьяненко</h3>
+            <p class="text-team" lang="en">Product Designer</p>
           </li>
           <li>
             <img
+              class="image-team"
               src="./images/our_team/img-repina.jpg"
               alt="Ольга Репина"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="subtitle-team">Ольга Репина</h3>
+            <p class="text-team" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
+              class="image-team"
               src="./images/our_team/img-tarasov.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="subtitle-team">Николай Тарасов</h3>
+            <p class="text-team" lang="en">Marketing</p>
           </li>
           <li>
             <img
+              class="image-team"
               src="./images/our_team/img-ermakov.jpg"
               alt="Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="subtitle-team">Михаил Ермаков</h3>
+            <p class="text-team" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
+    <footer class="footer">
+      <a class="logo-link link" href="./index.html">
+          <span class="accent-logo">Web</span>Studio</div></a
+        >
+      <address class="address">
+        <p class="text-detail">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
