Остался бг и проверить все

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,29 +43,74 @@
     </header>
     <!-- main -->
     <main>
-      <h1 class="main-title">Портфолио</h1>
-      <ul class="list">
-        <li><button class="service-button" type="button">Все</button></li>
-        <li><button class="service-button" type="button">Веб-сайты</button></li>
-        <li><button class="service-button" type="button">Приложения</button></li>
-        <li><button class="service-button" type="button">Дизайн</button></li>
-        <li><button class="service-button" type="button">Маркетинг</button></li>
-      </ul>
-      <ul>
-        <li>
-          <img src="" alt="">
-          <h2></h2>
-          <p></p>
-        </li>
-      </ul>
+      <section class="section-button">
+        <h1 class="title-all title-hidden">Портфолио</h1>
+        <ul class="list">
+          <li><button class="service-button" type="button">Все</button></li>
+          <li><button class="service-button" type="button">Веб-сайты</button></li>
+          <li><button class="service-button" type="button">Приложения</button></li>
+          <li><button class="service-button" type="button">Дизайн</button></li>
+          <li><button class="service-button" type="button">Маркетинг</button></li>
+        </ul>
+      </section>
+      <section class="section-portfolio">
+        <h2 class="title-all title-hidden">Образцы работ</h2>
+        <ul class="list-portfolio list">
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img1.jpg" alt="ноутбук с открытым вэб Веб-сайтом" width="370" height="294">
+            <h2 class="subtitle">Технокряк</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img2.jpg" alt="постер New Orlean vs Golden Star" width="370" height="294">
+            <h2 class="subtitle">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img3.jpg" alt="логотип ресторан Seafood" width="370" height="294">
+            <h2 class="subtitle">Ресторан<span lang="en">Seafood</span></h2>
+            <p class="text">Приложение</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img4.jpg" alt="наушники" width="370" height="294">
+            <h2 class="subtitle">Проект<span lang="en">Prime</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img5.jpg" alt="белая коробка и коричневая коробка" width="370" height="294">
+            <h2 class="subtitle">Проект<span lang="en">Boxes</span></h2>
+            <p class="text">Приложение</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img6.jpg" alt="монитор с Веб-сайтом" width="370" height="294">
+            <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img7.jpg" alt="развернутая книга" width="370" height="294">
+            <h2 class="subtitle">Издание<span lang="en">Limited Edition</span></h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img8.jpg" alt="рекламная бирка" width="370" height="294">
+            <h2 class="subtitle">Проект<span lang="en">LAB</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li class="item-portfolio">
+            <img class="imege" src="./images/portfolio/img9.jpg" alt="человек работает на наутбуке" width="370" height="294">
+            <h2 class="subtitle">Growing Business</h2>
+            <p class="text">Приложение</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- footer -->
-    <footer>
-      <a class="logo-link link" href="./index.html">
+    <footer class="footer">
+      <a class="logo-footer link" href="./index.html">
           <span class="accent-logo">Web</span>Studio</div></a
         >
       <address class="address">
-        <p class="text-detail">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="text-footer">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="list">
           <li>
             <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
