--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="menu-list list">
           <li class="menu-item">
             <a class="menu-link current link" href="/">Студия</a>
-          </li>
+          </l>
           <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Портфолио</a>
           </li>
@@ -53,7 +53,7 @@
       </section>
       <!-- Attention to detail -->
       <section class="section-detail">
-        <h2 class="title-all">Наши особенности</h2>
+        <h2 class="title-all title-hidden">Наши особенности</h2>
         <ul class="list">
           <li>
             <h3 class="subtitle-detail">Внимание к деталям</h3>
@@ -118,7 +118,7 @@
       <section class="section-team">
         <h2 class="title-all">Наша команда</h2>
         <ul class="team-list list">
-          <li>
+          <li class="team-item">
             <img
               class="image-team"
               src="./images/our_team/img-demianenko.jpg"
@@ -129,7 +129,7 @@
             <h3 class="subtitle-team">Игорь Демьяненко</h3>
             <p class="text-team" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               class="image-team"
               src="./images/our_team/img-repina.jpg"
@@ -140,7 +140,7 @@
             <h3 class="subtitle-team">Ольга Репина</h3>
             <p class="text-team" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               class="image-team"
               src="./images/our_team/img-tarasov.jpg"
@@ -151,7 +151,7 @@
             <h3 class="subtitle-team">Николай Тарасов</h3>
             <p class="text-team" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               class="image-team"
               src="./images/our_team/img-ermakov.jpg"
@@ -167,11 +167,11 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a class="logo-link link" href="./index.html">
+      <a class="logo-footer link" href="./index.html">
           <span class="accent-logo">Web</span>Studio</div></a
         >
       <address class="address">
-        <p class="text-detail">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="text-footer">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="list">
           <li>
             <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
