--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+  <body>
     <!-- header -->
     <header class="main-header">
       <nav class="main-nav">
         <a class="logo-link link" href="./index.html">
-          <span class="accent-logo">Web</span>Studio</div></a
+          <span class="accent-logo">Web</span>Studio</a
         >
         <ul class="menu-list list">
           <li class="menu-item">
             <a class="menu-link current link" href="/">Студия</a>
-          </l>
+          </li>
           <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Портфолио</a>
           </li>
@@ -168,16 +168,16 @@
     <!-- footer -->
     <footer class="footer">
       <a class="logo-footer link" href="./index.html">
-          <span class="accent-logo">Web</span>Studio</div></a
-        >
+        <span class="accent-logo">Web</span>Studio</a
+      >
       <address class="address">
         <p class="text-footer">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="list">
+        <ul class="list-footer list">
           <li>
-            <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
