--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Технокряк</h2>
-            <p class="text">Веб-сайт</p>
+            <h2 class="subtitle-portfolio">Технокряк</h2>
+            <p class="text-portfolio">Веб-сайт</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -72,8 +72,10 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="text">Дизайн</p>
+            <h2 class="subtitle-portfolio">
+              Постер<span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="text-portfolio">Дизайн</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -83,8 +85,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Ресторан<span lang="en">Seafood</span></h2>
-            <p class="text">Приложение</p>
+            <h2 class="subtitle-portfolio">Ресторан<span lang="en">Seafood</span></h2>
+            <p class="text-portfolio">Приложение</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -94,8 +96,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Проект<span lang="en">Prime</span></h2>
-            <p class="text">Маркетинг</p>
+            <h2 class="subtitle-portfolio">Проект<span lang="en">Prime</span></h2>
+            <p class="text-portfolio">Маркетинг</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -105,8 +107,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Проект<span lang="en">Boxes</span></h2>
-            <p class="text">Приложение</p>
+            <h2 class="subtitle-portfolio">Проект<span lang="en">Boxes</span></h2>
+            <p class="text-portfolio">Приложение</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -116,8 +118,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
-            <p class="text">Веб-сайт</p>
+            <h2 class="subtitle-portfolio" lang="en">Inspiration has no Borders</h2>
+            <p class="text-portfolio">Веб-сайт</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -127,8 +129,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Издание<span lang="en">Limited Edition</span></h2>
-            <p class="text">Дизайн</p>
+            <h2 class="subtitle-portfolio">Издание<span lang="en">Limited Edition</span></h2>
+            <p class="text-portfolio">Дизайн</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -138,8 +140,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Проект<span lang="en">LAB</span></h2>
-            <p class="text">Маркетинг</p>
+            <h2 class="subtitle-portfolio">Проект<span lang="en">LAB</span></h2>
+            <p class="text-portfolio">Маркетинг</p>
           </li>
           <li class="item-portfolio">
             <img
@@ -149,8 +151,8 @@
               width="370"
               height="294"
             />
-            <h2 class="subtitle">Growing Business</h2>
-            <p class="text">Приложение</p>
+            <h2 class="subtitle-portfolio">Growing Business</h2>
+            <p class="text-portfolio">Приложение</p>
           </li>
         </ul>
       </section>
